--- a/src/Components/Orders.scss
+++ b/src/Components/Orders.scss
@@ -26,7 +26,7 @@
     h1 {
       margin: 2rem;
       font-family: PT Serif;
-      font-size: 2.3rem;
+      font-size: 2.1rem;
       font-weight: 700;
       line-height: 38px;
       letter-spacing: 0em;
@@ -48,7 +48,7 @@
         }
         .orders--price {
           font-family: Work Sans;
-          font-size: 1rem;
+          font-size: 0.85rem;
           font-weight: 400;
           line-height: 16px;
           letter-spacing: 0em;
@@ -87,7 +87,7 @@
       color: white;
       padding: 0.7rem 2.5rem;
       border-radius: 30px;
-      margin: 2rem 3rem;
+      margin: 2rem 0;
       cursor: pointer;
       &:disabled {
         opacity: 0.5;
