--- a/src/Pages/Menu/Menu.scss
+++ b/src/Pages/Menu/Menu.scss
@@ -35,18 +35,18 @@
       .menuList--title {
         font-family: PT Serif;
         font-weight: 700;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         margin-bottom: 0.1rem;
       }
       .menuList--desc {
         font-family: Work Sans;
-        font-size: 0.75rem;
+        font-size: 0.55rem;
         font-weight: 400;
       }
 
       .menuList--price {
         font-family: PT Serif;
-        font-size: 23px;
+        font-size: 1.3rem;
         font-weight: 700;
         line-height: 28px;
       }
