--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8rem 2rem;
+  padding: 5.5rem 2rem;
   .cartLogo,
   .burgerMenu {
     position: fixed;
